# pizzaria-funcional

./: .travis.yml  README.md  pizzaria-funcional-bot.cabal  stack.yaml  telegram-pizza-chatbot.cabal
orders/: 123.json
src/: Handlers.hs  Keyboards.hs  Lib.hs  Storage.hs
