name:                telegram-pizza-chatbot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/paradigmas-2018-1/telegram-pizza-chatbot#readme
-- license:             BSD3
-- license-file:        LICENSE
-- author:              Author name here
-- maintainer:          example@example.com
-- copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     , mtl
                     , http-client
                     , http-client-tls
                     , telegram-api >= 0.6.3.0
                     , text
                     , transformers
  default-language:    Haskell2010

executable telegram-pizza-chatbot-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , telegram-pizza-chatbot
  default-language:    Haskell2010

test-suite telegram-pizza-chatbot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , telegram-pizza-chatbot
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/paradigmas-2018-1/telegram-pizza-chatbot
